force-app/main/default/objects/API_Authenticationkey__mdt/API_Authenticationkey__mdt.object-meta.xml
<CustomObject>
    <label>API 인증키</label>
</CustomObject>