force-app/main/default/objects/API_Authenticationkey__mdt/fields/DateRange__c.field-meta.xml
<CustomField>
    <fullName>DateRange__c</fullName>
    <description>나라장터 입찰정보 호출 날짜 범위지정</description>
    <inlineHelpText>나라장터 입찰정보 호출 날짜 범위지정</inlineHelpText>
    <label>호출 날짜 범위</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
                <default>true</default>
                <label>7</label>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>