force-app/main/default/objects/API_Authenticationkey__mdt/fields/HeaderKey__c.field-meta.xml
<CustomField>
    <fullName>HeaderKey__c</fullName>
    <label>HeaderKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>