force-app/main/default/objects/API_Authenticationkey__mdt/fields/HeaderLab__c.field-meta.xml
<CustomField>
    <fullName>HeaderLab__c</fullName>
    <label>HeaderLab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>