force-app/main/default/objects/API_Authenticationkey__mdt/fields/IfHeaderKeyId__c.field-meta.xml
<CustomField>
    <fullName>IfHeaderKeyId__c</fullName>
    <label>IfHeaderKeyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>