force-app/main/default/objects/API_Authenticationkey__mdt/fields/KeyValue__c.field-meta.xml
<CustomField>
    <fullName>KeyValue__c</fullName>
    <label>키값</label>
    <length>255</length>
    <type>Text</type>
</CustomField>