force-app/main/default/objects/API_Authenticationkey__mdt/fields/keyValueSp__c.field-meta.xml
<CustomField>
    <fullName>keyValueSp__c</fullName>
    <label>keyValueSp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>head</fullName>
                <default>true</default>
                <label>head</label>
            </value>
            <value>
                <fullName>param</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>